--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ label {
 }
 
 :root {
-  --_hue: 245;
+  --_hue: 606;
   --_size: 1.8rem;
   --_radius: 0.2em;
   --_tspeed_fast: 180ms;
@@ -61,7 +61,7 @@ label {
   }
 }
 
-[color-scheme="dark"] {
+[color-scheme='dark'] {
   --bg: var(--bg--dark);
   --txt: var(--txt--dark);
   --accent: var(--accent--dark);
@@ -70,7 +70,7 @@ label {
   color-scheme: dark;
 }
 
-[color-scheme="light"] {
+[color-scheme='light'] {
   --bg: var(--bg--light);
   --txt: var(--txt--light);
   --accent: var(--accent--light);
@@ -97,10 +97,10 @@ body {
   min-height: 100vh;
   display: grid;
   justify-items: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: hsl(var(--bg));
-  color: hsl(var(--txt));
+  color: hsl(var(--bg));
 }
 
 ::selection {
@@ -118,6 +118,7 @@ h1 {
   display: grid;
   gap: clamp(2rem, 3.5vmax, 8rem);
   text-align: center;
+  color: hsl(var(--accent));
 }
 
 hr {
@@ -132,8 +133,9 @@ hr {
   display: flex;
   place-items: center;
   gap: 0.5em;
-  background-color: hsl(var(--accent));
-  color: hsl(var(--bg));
+  /* background-color: hsl(var(--accent)); */
+  background: transparent;
+  color: hsl(var(--accent));
   text-decoration: none;
   padding: 0.5em;
   border-radius: var(--_radius);
@@ -191,7 +193,7 @@ hr {
   top: 50%;
   transform: translateY(-50%);
   padding: 0.1em 0.35em;
-  background-color: hsl(var(--muted));
+  /* background-color: hsl(var(--muted)); */
   transition: transform var(--_tspeed_fast) var(--_ttype_squish),
     background-color var(--_tspeed_fast) var(--_ttype_squish);
 }
@@ -201,7 +203,8 @@ hr {
   border-radius: var(--_radius);
   padding: 0.35em 0.55em;
   width: 100%;
-  background-color: hsl(var(--muted));
+  /* background-color: hsl(var(--muted)); */
+  background-color: rgba(0, 0, 0, 0.5);
   caret-color: hsl(var(--accent));
   box-shadow: 0 0 0 -0.1em hsl(var(--bg)), 0 0 0 -0.2em hsl(var(--accent) / 0.8);
   transition: box-shadow var(--_tspeed_fast) var(--_ttype_squish);
@@ -215,7 +218,8 @@ hr {
 .input:focus ~ .label,
 .input:not(:placeholder-shown) ~ .label {
   transform: translate3d(0, -3em, 0);
-  background-color: hsl(var(--bg));
+  /* background-color: hsl(var(--bg)); */
+  background: rgba(0, 0, 0, 0.5);
   color: hsl(var(--accent) / 0.8);
 }
 
@@ -223,20 +227,21 @@ hr {
   opacity: 0;
 }
 
-[role="dialog"] {
+[role='dialog'] {
   position: fixed;
   z-index: 100;
   inset: 0;
   padding-inline: 2vmax;
   display: grid;
   place-items: center;
-  background-color: hsl(var(--bg) / 0.7);
+  /* background-color: hsl(var(--bg) / 0.7); */
 }
 
-[role="dialog"] .todo {
+[role='dialog'] .todo {
   max-width: 40ch;
   padding: 2em 1.3em 1.3em;
-  background-color: hsl(var(--bg));
+  /* background-color: hsl(var(--bg)); */
+  background: rgba(0, 0, 0, 0.5);
   border-radius: var(--_radius);
   border: 0.1em solid hsl(var(--accent) / 0.3);
   box-shadow: 0 -1em 3em hsl(var(--muted)), 0 1em 3em hsl(var(--accent) / 0.2);
