--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,10 @@ h1 {
   max-height: 100%;
   width: 400px;
 }
+.particles-js-canvas-el {
+  height: 100vmax !important;
+  z-index: 0;
+}
 
 hr {
   border: 0;
@@ -253,9 +257,17 @@ hr {
   box-shadow: 0 -1em 3em hsl(var(--muted)), 0 1em 3em hsl(var(--accent) / 0.2);
 }
 
-@media screen and (min-width: 500px) {
-  .todo {
-    width: 100%;
+@media screen and (max-width: 450px) {
+  .container {
+    width: auto;
+  }
+  canvas {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: -10;
+    visibility: visible;
   }
 }
 
