--- a/src/index.css
+++ b/src/index.css
@@ -4,20 +4,15 @@
 
 @font-face {
   font-family: SF;
-  src: url("/SF-Pro-Text-Regular.otf");
-  font-weight: 300;
+  src: url("/SF-Pro-Text-Light.otf");
+  font-weight: 400;
 }
+
 @layer base {
   body {
     background: #1d2125;
     color: #b6c2cf;
     font-family: SF;
     color-scheme: dark;
-  }
-}
-
-@layer components {
-  .add-todo::-webkit-scrollbar {
-    display: none;
   }
 }
